--- a/Pages/Disbursements.cshtml
+++ b/Pages/Disbursements.cshtml
@@ -605,8 +605,8 @@ document.addEventListener("DOMContentLoaded", function () {
                                 <input type="hidden" value="@Model.ToDate?.ToString("yyyy-MM-dd")" name="ToDate" />
                                 
 
-                                @* <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" /> 
-                                <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />*@
+                                @* <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" /> *@
+                                <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />
                             </form>
                         </td>
                     </tr>
