--- a/Pages/Requests.cshtml
+++ b/Pages/Requests.cshtml
@@ -107,6 +107,7 @@
                                                         <form method="post">
                                                             <input type="hidden" value="@inbox.ReportId" name="ReportId" />
                                                             <input type="hidden" value="@inbox.Id" id="InboxId" name="InboxId" />
+                                                            <input type="hidden" value="@inbox.ReportType" id="ReportType" name="ReportType" />
 
                                                             <button asp-page-handler="AddOrder" class="btn btn-info btn-sm p-1"> Add Order to Item Card</button>
                                                             
